--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "node .\\server.js",
-    "start": "node server.js"
+    "debug": "node --inspect-brk ./server.js",
+    "start": "node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "https": "^1.0.0",
+    "nodaemon": "^0.0.5",
     "morgan": "^1.10.0",
     "nock": "^13.3.3",
     "request": "^2.88.2",
